# penweb

./: .env.sample  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  README.md  SETUP.md  install.sh  pyproject.toml  run.sh
docs/: CLI_USAGE.md  LAMBDA.md  LOGGING.md  LOGGING_SETUP.md
src/: main.py
src/cli/: __init__.py  banner.py  menu.py
src/d2/: .env.sample  README.md  lambda.py
src/lambda/: README.md  entrypoint.py
src/services/: attempt_login.py  clone.py  ping.py
src/utils/: config.py  ddos.py  logger.py  ping.py  sqs.py
test/: test_lambda.py
test/unit/: clone_output.py  logging.py  sqs.py
